# hwid-spoofer-asi

./: CMakeLists.txt
src/: main.cpp
src/main/: PluginState.cpp  PluginState.h
src/utils/other/: json.hpp
